Initial modifiered project css responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4227,6 +4227,224 @@ box-img-cat a img.active {
 
 /* Responsive default */
 @media (max-width: 1024px) {
+  /*  */
+  .tieuchi-left {
+    max-width: 100%;
+    background: transparent;
+    height: inherit;
+  }
+
+  .tieuchi-right {
+    max-width: 100%;
+    margin-left: 0;
+  }
+
+  .tieuchi-right::after {
+    display: none;
+  }
+
+  .box-tieuchi-item-before {
+    margin-bottom: 20px;
+  }
+
+  .about {
+    padding-top: 20px;
+  }
+
+  .about-left {
+    margin-left: 0;
+    margin-bottom: 20px;
+  }
+
+  .about-left::before {
+    display: none;
+  }
+
+  .about-title {
+    font-size: 14px;
+    margin-bottom: 8px;
+    padding-bottom: 4px;
+  }
+
+  .name-company-ab {
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 4px;
+  }
+
+  .about-content {
+    font-size: 12px;
+    text-align: justify;
+    margin-bottom: 8px;
+  }
+
+  .link-btn-more-ab {
+    font-size: 13px;
+  }
+
+  .link-btn-more-ab::before {
+    width: 105px;
+  }
+
+  .tieuchi {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .box-about-more {
+    display: block;
+    text-align: center;
+  }
+
+  .header-top {
+    display: none;
+  }
+
+  .slideshow {
+    margin-top: 0 !important;
+  }
+
+  .menu-res {
+    background: #00a54f;
+    width: 100%;
+  }
+
+  .header-bottom {
+    position: relative;
+  }
+
+  .header-bottom .wrap-content {
+    display: block;
+    margin: auto;
+    text-align: center;
+  }
+
+  .logo-header {
+    max-width: 100px;
+    display: block;
+    margin: auto;
+  }
+
+  .w-menu {
+    width: 100%;
+    position: fixed;
+    z-index: 105;
+  }
+
+  .tieuchi-title {
+    font-size: 11px;
+  }
+
+  .padding-top-bottom-ed {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .title-main-edd span,
+  .title-main span {
+    font-size: 20px;
+  }
+
+  .title-main {
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+  }
+
+  .box-img-cat img {
+    padding: 4px 8px;
+  }
+
+  .dm-noibat a {
+    font-size: 12px;
+  }
+
+  .name-product {
+    font-size: 12px;
+  }
+
+  .title-res span {
+    font-size: 20px;
+  }
+
+  .desc-main-product {
+    font-size: 12px;
+  }
+
+  .title-res {
+    padding-top: 20px;
+  }
+
+  .form-sub input {
+    font-size: 12px;
+  }
+
+  .register-service {
+    padding-bottom: 20px;
+  }
+
+  .box-main-news {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  a.name-newsnb {
+    margin-bottom: 8px;
+  }
+
+  .desc-newsnb {
+    font-size: 13px;
+  }
+
+  .item-newsnb {
+    padding-bottom: 20px;
+  }
+
+  .pic-video:before {
+    width: 60px;
+    height: 60px;
+    top: 40%;
+  }
+
+  .alb {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .title-main.title-main-alb {
+    font-size: 20px;
+  }
+
+  .wrap-partner {
+    padding-bottom: 20px;
+  }
+
+  #footer-map iframe {
+    position: relative !important;
+    width: 100% !important;
+  }
+
+  #footer-map::before {
+    bottom: -2px;
+  }
+
+  .breadCrumbs {
+    margin-top: 0;
+  }
+
+  .footer-powered .wrap-content {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .padding-top-bottom {
+    padding: 10px 0 !important;
+  }
+
+  .item-video1 img {
+    height: initial;
+  }
+  /*  */
+
   .dm-noibat {
     width: 100%;
     margin-bottom: 20px;
@@ -4316,6 +4534,224 @@ box-img-cat a img.active {
 }
 
 @media (max-width: 992px) {
+  /*  */
+  .tieuchi-left {
+    max-width: 100%;
+    background: transparent;
+    height: inherit;
+  }
+
+  .tieuchi-right {
+    max-width: 100%;
+    margin-left: 0;
+  }
+
+  .tieuchi-right::after {
+    display: none;
+  }
+
+  .box-tieuchi-item-before {
+    margin-bottom: 20px;
+  }
+
+  .about {
+    padding-top: 20px;
+  }
+
+  .about-left {
+    margin-left: 0;
+    margin-bottom: 20px;
+  }
+
+  .about-left::before {
+    display: none;
+  }
+
+  .about-title {
+    font-size: 14px;
+    margin-bottom: 8px;
+    padding-bottom: 4px;
+  }
+
+  .name-company-ab {
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 4px;
+  }
+
+  .about-content {
+    font-size: 12px;
+    text-align: justify;
+    margin-bottom: 8px;
+  }
+
+  .link-btn-more-ab {
+    font-size: 13px;
+  }
+
+  .link-btn-more-ab::before {
+    width: 105px;
+  }
+
+  .tieuchi {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .box-about-more {
+    display: block;
+    text-align: center;
+  }
+
+  .header-top {
+    display: none;
+  }
+
+  .slideshow {
+    margin-top: 0 !important;
+  }
+
+  .menu-res {
+    background: #00a54f;
+    width: 100%;
+  }
+
+  .header-bottom {
+    position: relative;
+  }
+
+  .header-bottom .wrap-content {
+    display: block;
+    margin: auto;
+    text-align: center;
+  }
+
+  .logo-header {
+    max-width: 100px;
+    display: block;
+    margin: auto;
+  }
+
+  .w-menu {
+    width: 100%;
+    position: fixed;
+    z-index: 105;
+  }
+
+  .tieuchi-title {
+    font-size: 11px;
+  }
+
+  .padding-top-bottom-ed {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .title-main-edd span,
+  .title-main span {
+    font-size: 20px;
+  }
+
+  .title-main {
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+  }
+
+  .box-img-cat img {
+    padding: 4px 8px;
+  }
+
+  .dm-noibat a {
+    font-size: 12px;
+  }
+
+  .name-product {
+    font-size: 12px;
+  }
+
+  .title-res span {
+    font-size: 20px;
+  }
+
+  .desc-main-product {
+    font-size: 12px;
+  }
+
+  .title-res {
+    padding-top: 20px;
+  }
+
+  .form-sub input {
+    font-size: 12px;
+  }
+
+  .register-service {
+    padding-bottom: 20px;
+  }
+
+  .box-main-news {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  a.name-newsnb {
+    margin-bottom: 8px;
+  }
+
+  .desc-newsnb {
+    font-size: 13px;
+  }
+
+  .item-newsnb {
+    padding-bottom: 20px;
+  }
+
+  .pic-video:before {
+    width: 60px;
+    height: 60px;
+    top: 40%;
+  }
+
+  .alb {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .title-main.title-main-alb {
+    font-size: 20px;
+  }
+
+  .wrap-partner {
+    padding-bottom: 20px;
+  }
+
+  #footer-map iframe {
+    position: relative !important;
+    width: 100% !important;
+  }
+
+  #footer-map::before {
+    display: none;
+  }
+
+  .breadCrumbs {
+    margin-top: 0;
+  }
+
+  .footer-powered .wrap-content {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .padding-top-bottom {
+    padding: 10px 0 !important;
+  }
+
+  .item-video1 img {
+    height: initial;
+  }
+  /*  */
+
   .footer-title:after {
     width: 100%;
   }
@@ -4366,9 +4802,236 @@ box-img-cat a img.active {
 }
 
 @media (max-width: 768px) {
-  .item-video1 img {
-    height: 250px;
+  /*  */
+
+  .about .wrap-content .row {
+    justify-content: center !important;
   }
+  .tieuchi .wrap-content {
+    justify-content: center;
+  }
+
+  .tieuchi-left {
+    max-width: 100%;
+    background: transparent;
+    height: inherit;
+  }
+
+  .tieuchi-right {
+    max-width: 100%;
+    margin-left: 0;
+  }
+
+  .tieuchi-right::after {
+    display: none;
+  }
+
+  .box-tieuchi-item-before {
+    margin-bottom: 20px;
+  }
+
+  .about {
+    padding-top: 20px;
+  }
+
+  .about-left {
+    margin-left: 0;
+    margin-bottom: 20px;
+  }
+
+  .about-left::before {
+    display: none;
+  }
+
+  .about-title {
+    font-size: 14px;
+    margin-bottom: 8px;
+    padding-bottom: 4px;
+  }
+
+  .name-company-ab {
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 4px;
+  }
+
+  .about-content {
+    font-size: 12px;
+    text-align: justify;
+    margin-bottom: 8px;
+  }
+
+  .link-btn-more-ab {
+    font-size: 13px;
+  }
+
+  .link-btn-more-ab::before {
+    width: 105px;
+  }
+
+  .tieuchi {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .box-about-more {
+    display: block;
+    text-align: center;
+  }
+
+  .header-top {
+    display: none;
+  }
+
+  .slideshow {
+    margin-top: 0 !important;
+  }
+
+  .menu-res {
+    background: #00a54f;
+    width: 100%;
+  }
+
+  .header-bottom {
+    position: relative;
+  }
+
+  .header-bottom .wrap-content {
+    display: block;
+    margin: auto;
+    text-align: center;
+  }
+
+  .logo-header {
+    max-width: 100px;
+    display: block;
+    margin: auto;
+  }
+
+  .w-menu {
+    width: 100%;
+    position: fixed;
+    z-index: 105;
+  }
+
+  .tieuchi-title {
+    font-size: 11px;
+  }
+
+  .padding-top-bottom-ed {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .title-main-edd span,
+  .title-main span {
+    font-size: 20px;
+  }
+
+  .title-main {
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+  }
+
+  .box-img-cat img {
+    padding: 4px 8px;
+  }
+
+  .dm-noibat a {
+    font-size: 12px;
+  }
+
+  .name-product {
+    font-size: 12px;
+  }
+
+  .title-res span {
+    font-size: 20px;
+  }
+
+  .desc-main-product {
+    font-size: 12px;
+  }
+
+  .title-res {
+    padding-top: 20px;
+  }
+
+  .form-sub input {
+    font-size: 12px;
+  }
+
+  .register-service {
+    padding-bottom: 20px;
+  }
+
+  .box-main-news {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  a.name-newsnb {
+    margin-bottom: 8px;
+  }
+
+  .desc-newsnb {
+    font-size: 13px;
+  }
+
+  .item-newsnb {
+    padding-bottom: 20px;
+  }
+
+  .pic-video:before {
+    width: 60px;
+    height: 60px;
+    left: 55%;
+    top: 40%;
+  }
+
+  .alb {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .title-main.title-main-alb {
+    font-size: 20px;
+  }
+
+  .wrap-partner {
+    padding-bottom: 20px;
+  }
+
+  #footer-map iframe {
+    position: relative !important;
+    width: 100% !important;
+  }
+
+  #footer-map::before {
+    display: none;
+  }
+
+  .breadCrumbs {
+    margin-top: 0;
+  }
+
+  .footer-powered .wrap-content {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .padding-top-bottom {
+    padding: 10px 0 !important;
+  }
+
+  .item-video1 img {
+    height: initial;
+  }
+  /*  */
+
+  /* .item-video1 img {
+    height: 250px;
+  } */
 
   .right-intro {
     width: 100%;
@@ -4584,6 +5247,7 @@ box-img-cat a img.active {
     width: 60px;
     height: 60px;
     top: 40%;
+    left: 70%;
   }
 
   .alb {
@@ -4605,7 +5269,7 @@ box-img-cat a img.active {
   }
 
   #footer-map::before {
-    bottom: -2px;
+    display: none;
   }
 
   .breadCrumbs {
